# ChangeLog for sci-visualization/mayavi
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-visualization/mayavi/ChangeLog,v 1.6 2009/02/25 12:00:56 bicatali Exp $

  25 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org> -mayavi-1.5.ebuild,
  mayavi-1.5-r1.ebuild:
  Removed obsolete revision

*mayavi-1.5-r1 (16 Jan 2009)

  16 Jan 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +files/mayavi-1.5-tkinter_objects.patch, +mayavi-1.5-r1.ebuild:
  Fix for tkinter object and typo, bug #255108, thanks Colin Macdonald

*mayavi-3.1.0 (15 Jan 2009)

  15 Jan 2009; Sébastien Fabbro <bicatali@gentoo.org> mayavi-1.5.ebuild,
  +mayavi-3.1.0.ebuild:
  New Enthought version for Mayavi2

  27 Oct 2008; Sébastien Fabbro <bicatali@gentoo.org> mayavi-1.5.ebuild:
  Switch to EAPI=2 with use dependencies

  27 Apr 2007; Sébastien Fabbro <bicatali@gentoo.org> mayavi-1.5.ebuild:
  slotting 2->1

*mayavi-1.5 (24 Apr 2007)

  24 Apr 2007; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml,
  +mayavi-1.5.ebuild:
  Initial import. Closing bug #50464. Thanks to Colin Macdonald <cbm@sfu.ca>,
  Simon-Nicolas Roth <simon.roth@videotron.ca> and others in the bug mentioned
  for their work.
