@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-visualization/mayavi/Attic/mayavi-3.1.0.ebuild,v 1.1 2009/01/15 10:31:48 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-visualization/mayavi/Attic/mayavi-3.1.0.ebuild,v 1.2 2009/03/20 21:02:17 bicatali Exp $
 
 EAPI=2
 inherit eutils distutils
@@ -11,7 +11,7 @@ DESCRIPTION="VTK based scientific data visualizer"
 HOMEPAGE="http://code.enthought.com/projects/mayavi"
 SRC_URI="http://pypi.python.org/packages/source/${MY_PN:0:1}/${MY_PN}/${MY_P}.tar.gz"
 
-IUSE="doc examples"
+IUSE="doc examples qt4 wxwindows"
 SLOT="2"
 KEYWORDS="~amd64 ~x86"
 LICENSE="BSD"
@@ -25,7 +25,10 @@ RDEPEND="dev-python/apptools
 	dev-python/ipython
 	dev-python/wxpython:2.8
 	>=dev-python/numpy-1.1
-	>=sci-libs/vtk-5[python]"
+	>=sci-libs/vtk-5[python]
+	qt4? ( x11-libs/qt-opengl )
+	wxwindows? ( dev-python/wxpython[opengl] )
+	!wxwindows? ( !qt4? ( dev-python/wxpython[opengl] ) )"
 
 DEPEND="dev-python/setuptools
 	>=dev-python/numpy-1.1
